fixed letter spacing in menu items

--- a/src/components/MenuItem/MenuItem.css
+++ b/src/components/MenuItem/MenuItem.css
@@ -79,7 +79,7 @@
   margin: 0;
   color: #1f1717;
   font-family: "Roboto Condensed", sans-serif, Arial;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 
 .menu-item__description {
